--- a/Compression_with_autoencoder.ipynb
+++ b/Compression_with_autoencoder.ipynb
@@ -34,7 +34,8 @@
       "source": [
         "import matplotlib.pyplot as plt\n",
         "%matplotlib inline\n",
-        "import numpy as np\n"
+        "import numpy as np\n",
+        "import random"
       ],
       "execution_count": 0,
       "outputs": []
@@ -55,18 +56,18 @@
         "id": "FSF2lF5O8zoY",
         "colab_type": "code",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 34
         },
-        "outputId": "5d33121d-33bb-414b-e55a-01e38972cb04"
+        "outputId": "50baa1e5-7fa1-4a95-f2b9-6d2d754253fc"
       },
       "source": [
         "from keras.datasets import mnist\n",
         "from keras.utils import np_utils\n",
-        "\n",
         "(X_train, y_train), (X_test, y_test) = mnist.load_data()\n",
         "X_train.shape"
       ],
-      "execution_count": 3,
+      "execution_count": 57,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -78,7 +79,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 3
+          "execution_count": 57
         }
       ]
     },
@@ -93,21 +94,149 @@
         "X_train = X_train.reshape(60000, 784)\n",
         "X_test = X_test.reshape(10000, 784)\n",
         "X_train = X_train.astype(\"float32\")\n",
-        "X_test = X_test.astype(\"float32\")\n",
-        "\n",
-        "# Put everything on grayscale\n",
-        "X_train /= 255\n",
-        "X_test /= 255\n",
-        "\n",
-        "print(y_train)\n",
-        "\n",
-        "# convert class vectors to binary class matrices\n",
-        "Y_train = np_utils.to_categorical(y_train, 10)\n",
-        "Y_test = np_utils.to_categorical(y_test, 10)\n",
-        "print(Y_train)"
+        "X_test = X_test.astype(\"float32\")"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Zzxi5d3gVf-j",
+        "colab_type": "text"
+      },
+      "source": [
+        "Salt-and-pepper noise is a form of noise sometimes seen on images. It is also known as impulse noise. This noise can be caused by sharp and sudden disturbances in the image signal. It presents itself as sparsely occurring white and black pixels. An effective noise reduction method for this type of noise is a median filter or a morphological filter.For reducing either salt noise or pepper noise, but not both, a contraharmonic mean filter can be effective.\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "k4kTlx9IVaQG",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def sp_noise(arr,prob):\n",
+        "    '''\n",
+        "    Add salt and pepper noise to image\n",
+        "    prob: Probability of the noise\n",
+        "    '''\n",
+        "    output = np.zeros(784)\n",
+        "    thres = 1 - prob \n",
+        "    for i in range(784):\n",
+        "        rdn = random.random()\n",
+        "        if rdn < prob:\n",
+        "          output[i] = 0\n",
+        "        elif rdn > thres:\n",
+        "          output[i] = 1\n",
+        "        else:\n",
+        "          output[i] = arr[i]\n",
+        "    return output"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GcJunVHnYF_J",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "a=sp_noise(X_train[0],0.2)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "wUP8lcCPUv0T",
+        "colab_type": "text"
+      },
+      "source": [
+        "Let's see some dataset elements before and after noise \n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3SqSmvT_ZbB5",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 216
+        },
+        "outputId": "de46b682-f544-4596-c2fc-c7b5f3cf34a3"
+      },
+      "source": [
+        "\n",
+        "plt.subplot(121)\n",
+        "plt.imshow(a.reshape(28, 28), cmap=plt.get_cmap('gray'), vmin=0, vmax=1)\n",
+        "plt.title(\"image with noise\")\n",
+        " \n",
+        " \n",
+        "plt.subplot(122)\n",
+        "plt.imshow(X_train[0].reshape(28, 28), cmap=plt.get_cmap('gray'), vmin=0, vmax=1)\n",
+        "plt.title(\"Original image\")\n",
+        "\n",
+        "# Show the graph\n",
+        "plt.show()"
+      ],
+      "execution_count": 73,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXAAAADHCAYAAAAAoQhGAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADh0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uMy4xLjIsIGh0\ndHA6Ly9tYXRwbG90bGliLm9yZy8li6FKAAAZq0lEQVR4nO3de9RddX3n8feHADrcEoI1BkQil2KB\nYUITQSkIilwLC1CXi0wpoAjYkg52kBYz1iJdgRQjtlwGg4LAqEhGRSJryqUQSKmYMVwUDGVMEQoh\ngBACCSia8J0/9o4env07ec4+t+f8Tj6vtZ71nPPdv733b5/ne77POfu3L4oIzMwsP5uMdQfMzKw9\nLuBmZplyATczy5QLuJlZplzAzcwy5QJuZpapoSzgkn4q6eCx7kc3SJol6asbmH6KpHv61Jc1knbu\nx7qsP0bLr3bbtrCskLRrk2n/JOnkbqxn2MnHgedD0hTg58BmEbG2jJ0CfCIiDhi7ntkgKHPhbGAX\n4GXgRuAzEbFqLPuVIimA3SJi2Vj3JWdD+QncbGMj6Wzg74FzgPHAe4CdgNslbd5knk3710PrhaEs\n4JIel/TB8vF5kv63pK9LWi3pIUm/L+kzkp6T9KSkwxrm/ZikR8q2j0k6Y8Sy/0rSCklPS/pE41dB\nSW+SNFfSf0h6VtKXJf2nJn18QtK08vGflMvZs3x+qqTvNfT/6+Vsi8rfq8rdGe9tWN5cSS9K+rmk\nI0d5bT4t6SeSXpJ0g6Q3N0w/TdIySSslLZC0fcO0xm09StLS8nVaLunTDe2OlvSgpFWSfiBp7w39\nvawzkrYBPg/8RUTcEhG/iYjHgY8CU4ATy3bnSfp2+V54GThlRH4h6aQyN1+Q9DeJ99LXy8dTynw4\nucz35yX9j4bl7Cvp3jIHVki6rNk/ksT23CXpE+XjUyT9q6Qvlct6TNL+ZfzJ8j18csO8fyzpAUkv\nl9PPG7HsDW3fJpLOlfTv5fT5kibW/oP00VAW8IRjgP8FbAs8ANxKse07AOcD8xraPgccDWwDfAz4\nkqQ/BJB0BPDfgQ8CuwIHj1jPHOD3ganl9B2AzzXp090N8x8EPAa8r+H53Yl51k+fEBFbRcS95fP9\ngEeBtwAXAVdJUpP1QvHGPgJ4J7A3cEq5fR8ALiynTwaeAL7VZBlXAWdExNbAXsCd5TL2Aa4GzgC2\no3htF0h60wb6Y53ZH3gz8N3GYESsAf4PcGhD+Fjg28AE4BuN7SXtAfxP4E8o/v7jKXJ4Qw4AdgcO\nAT4n6Q/K+DrgLyly8r3l9D+vuV3r7Qf8hCKfvkmRk++meI+dCFwmaauy7SvASeX2/THwZ5KOa3H7\n/gI4juL9tz3wInB5m33uj4gYuh/gceCD5ePzgNsbph0DrAHGlc+3BoKiKKaW9T3grPLx1cCFDdN2\nLefdFRBF8uzSMP29wM+bLPdUYEH5+BHgE8C3yudPAH/Y0P+vl4+nlOvbtGE5pwDLGp5vUbZ52wZe\nmxMbnl8EfLl8fBVwUcO0rYDfAFPK5wHsWj7+D4oivc2I5V8B/N2I2KPAQWOdF8P6Q1HEnmkybc76\n/C9zadGI6Y359Tng+hG59OsR76WRufj2hvb/FzihST8+BdzY8Py3uZRoexfFuM76/P5Zw7T/XM47\nqSH2AjC1ybL+AfhSi9v3CHBIw/TJZf5vmlr2IPxsLJ/An214/Evg+YhY1/AcimKFpCMl/bDchbAK\nOIriUwQU/5WfbFhW4+Pfo0iI+8qvequAW8p4yt3AgZImA+OA+cAfqRioHA88WGP7nln/ICJebdye\n0doDrza03Z7in8f6Za2heHOkPoV9mOK1eULS3Q27c3YCzl7/GpSvw47lsq03ngfeovQ+7cnl9PWe\nTLRZ7w35XebSC6OsO5lLKnZT3izpmXJ3zQX87n1U18j3LxExMrZ+vftJWijpF5JeAj5Jk/dvYvt2\nAm5syNtHKL5JTGqz3z23sRTwlpRf878DzKX4Dz+B4ivo+t0RK4C3N8yyY8Pj5ykSac+ImFD+jI+I\nZCGNYvT9VYqvbYsi4mWKN8PpwD0R8Xpqtva3riVPUyQxAJK2pPjaurzSkYgfRcSxwFspvqXMLyc9\nCcxueA0mRMQWEXF9j/u+MbsXeA34UGOw3K1wJHBHQ3hDOfSG/FYxfrNdm326Avg3iiNNtgFm8bv3\nUS99E1gA7BgR44Ev0+T9m9i+J4EjR+TumyOikv+DwgX8jTYH3gT8AlhbDgYe1jB9PvAxSX8gaQvg\nb9ZPKAvuVyj2mb8VQNIOkg7fwPruBmbyu/3dd414PtIvgNeBXh2LfT3F9k0t/5ldACyOYkDstyRt\nrmLgdXxE/IbikLX1/3C+Anyy/CQkSVuWA0tb96jPG72IeIliEPNSSUdI2qz8JjcfeIpi/KcV3waO\nKQcJN6fYZdJu0d2aIi/WSHoX8GdtLqed9a6MiF9J2hf4rw3TRtu+LwOzJe0EIOn3JB3bp363xQW8\nQUSsBv4bReK/SPHHX9Aw/Z+AS4CFwDLgh+Wk18rff70+Xn5t/GeKAZ5m7qZIuEVNno/s36vAbOBf\ny69576m5iRsUEf9M8U/pOxSfVnYBTmjS/E+Bx8vt/CTFwBARsQQ4DbiM4jVcRjlIar0TERdRfMqd\nS1E4F1N8ojwkIl7b0LwNy/gpxTfCb1H8/ddQDOq3NP8In6Z4/6ym+Kd+QxvLaMefA+dLWk2xz3v9\nN8NWtu8fKd7vt5Xz/5BiAHVg+USeDpQj7g8Db4ryxBqzYVHugllFsRvk52Pdn24bhu3zJ/CaJB2v\n4njvbSlOnPi+i7cNC0nHSNqiHP+YCzxEceTSUBi27XMBr+8Miq9d/04xQt2vfXtm/XAsxWD208Bu\nFIcFDtPX9KHaPu9CMTPLlD+Bm5llqqMCXh6y9KiKa2ec261OmY0157bloO1dKJLGAf+P4joLTwE/\nAmZExNINzNPyyqZNm9ZyX+67776W50+1HVT93obU+pqtq07bXvUhJSI6Plmk17lt1o5UbndSwN8L\nnBcRh5fPP1Ou5MINzNPyyur0K3Xdpmbzb/gaT4Ol39uQWl+zddVp26s+NJm/GwW8p7lt1o5Ubney\nC2UH3nhdhadIXDND0umSlkha0sG6zPrJuW1Z6PkF3SPiSuBK8KcUGy7ObRtrnRTw5bzxYk5vJ3HR\no3Z1+nW8n7sZ6vZhrA/d7MaumV69vgOyO6ynuW3WLZ3sQvkRsJukd5YXhjmBhuuGmGXMuW1ZaPsT\neESslTST4u4244Cry4vFmGXNuW256OuZmMOwn3AQdqF0uusgtyN06vS3G0ehtGMYctsGW7ePQjEz\nszHkAm5mlqmeH0bYD706qSSlG8vt566Kfr42vZJbf836xZ/Azcwy5QJuZpYpF3Azs0y5gJuZZaqv\nBXzatGlExBt+mhnZbkNtJVV+6kitq9nPoGrW305fm17pxus7ct46lyA2Gwb+BG5mlikXcDOzTLmA\nm5llygXczCxTLuBmZpka2KsRDsMp4L3ShftGJuODcJXDQbgnZjt8NULrNV+N0MxsiLiAm5llygXc\nzCxTLuBmZpnq6Hrgkh4HVgPrgLURMb3uMgb59PQ6Oh18mzhxYiW2cuXKZNvtttuu9Y4lNOvX9ttv\nX4k9/fTTybZ1/m7duA1dv3UjtzdG48aNq8TGjx/f0TJnzpyZjG+xxRaV2O67755se+aZZ1Zic+fO\nTbadMWNGJfarX/0q2XbOnDmV2Oc///lk217oxg0d3h8Rz3dhOWaDxrltA827UMzMMtVpAQ/gNkn3\nSTq9Gx0yGxDObRt4ne5COSAilkt6K3C7pH+LiEWNDcrk9xvAcuPctoHX0SfwiFhe/n4OuBHYN9Hm\nyoiY7kEgy4lz23LQ9idwSVsCm0TE6vLxYcD5bSwnGe/0KIdeHc3QjaNm5s+fX4l9+MMf7ni5Kamj\nAp544olk23e84x2VWLPXcfXq1ZXYj3/842TbAw88sBIb5KOPupXbgyz1t958882Tbffff/9K7IAD\nDki2nTBhQiXWq9xOeeqpp5LxSy65pBI7/vjjk23r5Pbdd99do3fd18kulEnAjeUbfFPgmxFxS1d6\nZTa2nNuWhbYLeEQ8BvyXLvbFbCA4ty0XPozQzCxTLuBmZpka8+uB9+ra1HU068OLL75YidU5LXiT\nTdL/H19//fWW2tZ5DdatW5eMpwYxm2k2qJNy4403tty2U63m6PTp01myZImvB95g6tSpyfidd95Z\niXV6ynu/pd5HH//4x5Nt16xZ0/JyV6xYUYmlagHAo48+2vJyO+XrgZuZDREXcDOzTLmAm5llygXc\nzCxTLuBmZpnK6iiUXt31vJlly5ZVYjvvvHPL89eROgrl3nvvTbZdtWpVJXbUUUcl27700kuVWLOj\nDXp1SYI+X+rAR6E0SN0oBGDx4sWVWK9yu9X1Qzq33//+9yfb/vrXv67EcjuSpg4fhWJmNkRcwM3M\nMuUCbmaWKRdwM7NMdeOmxh2pM5jVjYGvTpfx1a9+NRk/9dRTK7HUqb7N3H///ZXYoYcemmybOi14\nzz33TLa94YYbWu5DSjcGjjt9zQfhcgu5WrlyZTJ+zjnnVGJHH310su0DDzxQiaWur93Mgw8+WIk1\ny+1XXnmlEmuW22eddVbLfRhW/gRuZpYpF3Azs0y5gJuZZcoF3MwsU6MWcElXS3pO0sMNsYmSbpf0\ns/L3tr3tpln3Obctd6OeSi/pfcAa4LqI2KuMXQSsjIg5ks4Fto2Ivx51ZQN6unEd22yzTTKeupP1\nvHnzkm1TR6zUufHCMOjFZRHq3tDBuf1GvcrtE088sRK7/vrra/bO2jqVPiIWASOPRToWuLZ8fC1w\nXMe9M+sz57blrt194JMiYv19h54BJnWpP2Zjzblt2ej4RJ6IiA19fZR0OnB6p+sx6zfntg26dj+B\nPytpMkD5+7lmDSPiyoiYHhHT21yXWT85ty0b7X4CXwCcDMwpf9/UtR5tQDeuHd7q/M2WUaft3Llz\nW+5Dav5mA5t1TtG32sYktwfByy+/3HLb1HXmmznttNMqsWaXeHBu19PKYYTXA/cCu0t6StKpFMl9\nqKSfAR8sn5tlxbltuRv1E3hEzGgy6ZAu98Wsr5zbljufiWlmlikXcDOzTLmAm5llaszvSr8x6vQu\n7b2Yv+4y6vBd6YfPlltumYx///vfr8QOOuigSuzII49Mzn/bbbd11rEh5rvSm5kNERdwM7NMuYCb\nmWXKBdzMLFMb3SBmN06x73Rdu+66ayWWuiv9+PHjk/Nfc801ldiSJUuSbS+99NJKLLe7ude8hIIH\nMcfQLrvsUomlcnvVqlXJ+RcuXFiJNcvtyy+/vBLrZz3rNw9impkNERdwM7NMuYCbmWXKBdzMLFMD\nO4jZ6WBjN64d3s/BvjrbW+eayalrik+ePDnZdsWKFcl4TjyIOXiOP/74SuxrX/tasu3WW2/d8nJn\nzZpViV133XXJtsOa2/4EbmaWKRdwM7NMuYCbmWXKBdzMLFOt3BPzaknPSXq4IXaepOWSHix/jupt\nN826z7ltuRv1KBRJ7wPWANdFxF5l7DxgTUS0ftt10iP13TgKZhCOFunF9bz32muv5PwXX3xxJXbY\nYYe1vK4rrrgi2Xb27NmV2PLly1tebjN9/vu0vLJe57Y1Vye3Dzmk9VuUzps3Lxmvk9uDqq2jUCJi\nEbCyJz0yG0PObctdJ/vAZ0r6Sfk1dNuu9chs7Dm3LQvtFvArgF2AqcAK4IvNGko6XdISSelLipkN\nFue2ZaOtAh4Rz0bEuoh4HfgKsO8G2l4ZEdMjYnq7nTTrF+e25aSlU+klTQFubhjomRwRK8rHfwns\nFxEnjLac6dOnx8hr+zYb4KpzI9w+3zQ3GR/rgdSTTjop2TZ1ynKzvm6ySfX/+SC85nXUPZW+W7nt\nQczumDBhQiV2zDHHJNvWye0777yzEjv00ENr9m5spXJ709FmknQ9cDDwFklPAX8LHCxpKhDA48AZ\nXe2pWR84ty13oxbwiJiRCF/Vg76Y9ZVz23LnMzHNzDLlAm5mlikXcDOzTA3sDR3qGOAjIlpu22l/\n6xwds27dumTbtWvXVmKHH354su1dd93Vcd9aVfMyBb6hw0bitddeq8Q23TQ9rNer3O4n39DBzGyI\nuICbmWXKBdzMLFMu4GZmmRr1RJ4cDOqd5pvptA/nn39+JXbLLbck26Zeh2Z3tV+6dGkltnDhwmTb\nOtswCK+5DZa99947Gf/IRz5Sib373e9Otm02YJmSyu1Fixa1PP+g8idwM7NMuYCbmWXKBdzMLFMu\n4GZmmXIBNzPLVF+PQpk2bRojb+jQTKdHlgzCDR3q9OHSSy+txD70oQ8l277tbW9rebkpqRs3AKxY\nsaIS22effZJtB/Wu9Da2dt9990ps5syZlVivcrvZZSJSud3saKyc+BO4mVmmXMDNzDLlAm5mlikX\ncDOzTI16PXBJOwLXAZMobvR6ZUT8o6SJwA3AFIqbv340Il4cZVlDe83k1ODLjBmpWy7CxRdfXInV\nuW53HePGjet4GTmpcz1w53Zr6uR2asByypQp3e4SQPKAiNmzZyfbLliwoCd96Kd2rwe+Fjg7IvYA\n3gOcKWkP4FzgjojYDbijfG6WE+e2ZW3UAh4RKyLi/vLxauARYAfgWODastm1wHG96qRZLzi3LXe1\njgOXNAXYB1gMTIqI9QdXPkPxNTQ1z+nA6e130az3nNuWo5YHMSVtBXwH+FREvNw4LYod6cl9gBFx\nZURMj4jpHfXUrEec25arlgq4pM0oEvwbEfHdMvyspMnl9MnAc73polnvOLctZ60chSKK/YArI+JT\nDfEvAC9ExBxJ5wITI+KvNrSs6dOnx8iR42anWffqVO06d7BPtf3ABz6QbJu68UGdo0hSR4s0mz91\nKnyzU5NvuummSqzOKcSDfGOMlJpHoXQtt3M7CmXSpOpeoT322CPZ9rLLLqvE3vWud3W9TwCLFy+u\nxL7whS8k23aa27lJ5XYr+8D/CPhT4CFJD5axWcAcYL6kU4EngI92q6NmfeLctqyNWsAj4h6g2aea\nQ7rbHbP+cW5b7nwmpplZplzAzcwyNeogZldX1uFATzcG1CZOnFiJvfDCC8m2y5Ytq8R23nnnltfV\nTGoQ8p577qnEDjzwwOT8dQZiNzZ1BjG7aRAGMVO5PW/evGTbqVOnVmLdyO2UH/zgB5XYF7/4xWTb\nW2+9tRL75S9/2fU+5ajdU+nNzGwAuYCbmWXKBdzMLFMu4GZmmXIBNzPLVFZHoTSz3377VWLnnHNO\nsu2+++5bie2www5d7xPAq6++moxfcsklldisWbMqsU4vEVB3GYOg0yNshu0olGHI7QsuuKASe+WV\nV7rep2Hno1DMzIaIC7iZWaZcwM3MMuUCbmaWqaEYxKwz8JW6xnadO7dfeOGFyfjatWsrsc9+9rPJ\ntp0OLHZ6TfPcBjbrGLZBzDlz5lRizQYx61i6dGkldvPNNyfbpnK72anwq1at6qxj1pQHMc3MhogL\nuJlZplzAzcwy5QJuZpapUQu4pB0lLZS0VNJPJZ1Vxs+TtFzSg+XPUb3vrln3OLctd63clX4yMDki\n7pe0NXAfcBzFjV7XRMTcllc2ABe9r2Osj+DoxunxdY4y6nS5g3B0S8270m+0uW35aeuu9BGxAlhR\nPl4t6RGgNxdYMOsj57blrtY+cElTgH2AxWVopqSfSLpa0rZN5jld0hJJSzrqqVkPObctRy2fyCNp\nK+BuYHZEfFfSJOB5IIC/o/gq+vFRlpHV18yx3k3gXSj1tXMiz8aY25afVG63VMAlbQbcDNwaERcn\npk8Bbo6IvUZZTlZJPtZFygW8vroFfGPNbctPW/vAVbwrrwIeaUxwSZPLfYgAxwMPd6uj0LsCUWe5\nvTjlvc5ye3U98G5cPmEQinWnxiq3zbqllaNQDgD+BXgIeL0MzwJmAFMpvmY+DpzRkPTNltVy5RiE\nAt6LdfVqfd0o4MNQlGsehTImuW3WjrZ3oXSLC3jv1ucCXhi2i1mZreeLWZmZDREXcDOzTLmAm5ll\natSjUMZKr/bdDsl+3kqsVzd0GOb95Wa58ydwM7NMuYCbmWXKBdzMLFMu4GZmmer3IObzwBPl47eU\nz1uWycDZb7erV/3t56Btw/y1/15jYKcxXPf63M7hdWrXsG5bDtuVzO2+non5hhVLSyJi+pisvIe8\nXRu3YX6dhnXbct4u70IxM8uUC7iZWabGsoBfOYbr7iVv18ZtmF+nYd22bLdrzPaBm5lZZ7wLxcws\nU30v4JKOkPSopGWSzu33+rupvOHtc5IebohNlHS7pJ+Vv5M3xB1kknaUtFDSUkk/lXRWGc9+23pp\nWHLbeZ3PtvW1gEsaB1wOHAnsAcyQtEc/+9Bl1wBHjIidC9wREbsBd5TPc7MWODsi9gDeA5xZ/p2G\nYdt6Yshy+xqc11no9yfwfYFlEfFYRPwa+BZwbJ/70DURsQhYOSJ8LHBt+fha4Li+dqoLImJFRNxf\nPl4NPALswBBsWw8NTW47r/PZtn4X8B2AJxueP1XGhsmkhvsnPgNMGsvOdKq8K/s+wGKGbNu6bNhz\ne6j+9sOS1x7E7KEoDvHJ9jAfSVsB3wE+FREvN07Lfdusfbn/7Ycpr/tdwJcDOzY8f3sZGybPSpoM\nUP5+boz70xZJm1Ek+Tci4rtleCi2rUeGPbeH4m8/bHnd7wL+I2A3Se+UtDlwArCgz33otQXAyeXj\nk4GbxrAvbVFxBaurgEci4uKGSdlvWw8Ne25n/7cfxrzu+4k8ko4C/gEYB1wdEbP72oEuknQ9cDDF\n1cyeBf4W+B4wH3gHxdXpPhoRIweEBpqkA4B/AR4CXi/Dsyj2F2a9bb00LLntvM5n23wmpplZpjyI\naWaWKRdwM7NMuYCbmWXKBdzMLFMu4GZmmXIBNzPLlAu4mVmmXMDNzDL1/wHdADvTkNGnkQAAAABJ\nRU5ErkJggg==\n",
+            "text/plain": [
+              "<Figure size 432x288 with 2 Axes>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rvLiQUKGZ8EA",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tmxeji5-PO_E",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zZwLTk2PJut7",
+        "colab_type": "text"
+      },
+      "source": [
+        ""
+      ]
     }
   ]
 }
