--- a/Compression_with_autoencoder.ipynb
+++ b/Compression_with_autoencoder.ipynb
@@ -26,6 +26,21 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "DGeKkSLV3BW5",
+        "colab_type": "text"
+      },
+      "source": [
+        "#In addition to the implementation of deep encoder we will study the effect of different distorsions and noise on the training of this model. In our case we will study two types of noise \n",
+        "\n",
+        "\n",
+        "1.   Salt & pepper\n",
+        "2.   Speckle\n",
+        "\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "LYnLTdcU8pol",
@@ -71,16 +86,16 @@
       "metadata": {
         "id": "iGcMttWK4CXd",
         "colab_type": "code",
+        "outputId": "0b6597d9-a973-41c6-96fb-ef43759985fa",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "0b6597d9-a973-41c6-96fb-ef43759985fa"
+        }
       },
       "source": [
         "X_train.shape"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -101,16 +116,16 @@
       "metadata": {
         "id": "hPzKPx0r4FmU",
         "colab_type": "code",
+        "outputId": "6d84c7da-5b20-4775-a6a8-87f752564fc6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "6d84c7da-5b20-4775-a6a8-87f752564fc6"
+        }
       },
       "source": [
         "X_test.shape"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -231,11 +246,11 @@
       "metadata": {
         "id": "3SqSmvT_ZbB5",
         "colab_type": "code",
+        "outputId": "1947e62c-a10d-41ad-82c2-0cd15072f771",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 216
-        },
-        "outputId": "1947e62c-a10d-41ad-82c2-0cd15072f771"
+        }
       },
       "source": [
         "plt.subplot(121)\n",
@@ -250,7 +265,7 @@
         "# Show the graph\n",
         "plt.show()"
       ],
-      "execution_count": 24,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -298,11 +313,11 @@
       "metadata": {
         "id": "FNTkeSYjhlfD",
         "colab_type": "code",
+        "outputId": "4687538a-cc02-4a98-eaab-635b04046897",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 282
-        },
-        "outputId": "4687538a-cc02-4a98-eaab-635b04046897"
+        }
       },
       "source": [
         "a=speckle_noise(X_train[0])\n",
@@ -310,7 +325,7 @@
         "plt.imshow(a.reshape(28, 28), cmap=plt.get_cmap('gray'), vmin=0, vmax=1)\n",
         "print(a.max())\n"
       ],
-      "execution_count": 27,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -371,11 +386,11 @@
       "metadata": {
         "id": "kggjTRmfl-a4",
         "colab_type": "code",
+        "outputId": "83557477-cc34-41ac-a0b3-f0e6ac6095c4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 216
-        },
-        "outputId": "83557477-cc34-41ac-a0b3-f0e6ac6095c4"
+        }
       },
       "source": [
         "plt.subplot(121)\n",
@@ -390,7 +405,7 @@
         "# Show the graph\n",
         "plt.show()"
       ],
-      "execution_count": 30,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -504,17 +519,17 @@
       "metadata": {
         "id": "XBEWCvWZKZWP",
         "colab_type": "code",
+        "outputId": "fe55f952-46c0-4af2-c447-2ae15adbc98f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 661
-        },
-        "outputId": "fe55f952-46c0-4af2-c447-2ae15adbc98f"
+        }
       },
       "source": [
         "from keras.utils import plot_model\n",
         "plot_model(autoencoder, to_file='model.png')"
       ],
-      "execution_count": 13,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -536,11 +551,11 @@
       "metadata": {
         "id": "yXQ-PGRSKhPw",
         "colab_type": "code",
+        "outputId": "653ba36a-09f9-478e-e453-5a487f620c35",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 295
-        },
-        "outputId": "653ba36a-09f9-478e-e453-5a487f620c35"
+        }
       },
       "source": [
         "\n",
@@ -553,7 +568,7 @@
         "plt.legend(['Train', 'Test'], loc='upper left')\n",
         "plt.show()\n"
       ],
-      "execution_count": 14,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -574,11 +589,11 @@
       "metadata": {
         "id": "rfAKpzgWo1r_",
         "colab_type": "code",
+        "outputId": "973a0e3c-1a7f-41d7-db30-f7159f9c866c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 217
-        },
-        "outputId": "973a0e3c-1a7f-41d7-db30-f7159f9c866c"
+        }
       },
       "source": [
         "decoded_imgs = autoencoder.predict(X_test)\n",
@@ -597,7 +612,7 @@
         "   \n",
         "plt.show()"
       ],
-      "execution_count": 18,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -648,11 +663,11 @@
       "metadata": {
         "id": "GzaIiYNQWdxj",
         "colab_type": "code",
+        "outputId": "7d0f0aae-6304-4cff-92cb-aa7e86182b09",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 295
-        },
-        "outputId": "7d0f0aae-6304-4cff-92cb-aa7e86182b09"
+        }
       },
       "source": [
         "# Plot training & validation loss values\n",
@@ -664,7 +679,7 @@
         "plt.legend(['Train', 'Test'], loc='upper left')\n",
         "plt.show()"
       ],
-      "execution_count": 40,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -685,11 +700,11 @@
       "metadata": {
         "id": "rMtF1pCs5cDc",
         "colab_type": "code",
+        "outputId": "e28f288b-9c04-4db2-ab59-50078204226c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 217
-        },
-        "outputId": "e28f288b-9c04-4db2-ab59-50078204226c"
+        }
       },
       "source": [
         "decoded_imgs2 = autoencoder_salt_pepper.predict(X_test_salt_pepper)\n",
@@ -708,7 +723,7 @@
         "   \n",
         "plt.show()"
       ],
-      "execution_count": 41,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -759,11 +774,11 @@
       "metadata": {
         "id": "lMbG6r2UW5M5",
         "colab_type": "code",
+        "outputId": "0b46925d-1f88-4570-a91e-1f4decc1d349",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 295
-        },
-        "outputId": "0b46925d-1f88-4570-a91e-1f4decc1d349"
+        }
       },
       "source": [
         "# Plot training & validation loss values\n",
@@ -775,7 +790,7 @@
         "plt.legend(['Train', 'Test'], loc='upper left')\n",
         "plt.show()"
       ],
-      "execution_count": 44,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -796,11 +811,11 @@
       "metadata": {
         "id": "uxD4tMVqW8NV",
         "colab_type": "code",
+        "outputId": "7a78f705-eb5b-456f-8a14-eababeae9fdd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 217
-        },
-        "outputId": "7a78f705-eb5b-456f-8a14-eababeae9fdd"
+        }
       },
       "source": [
         "decoded_imgs2 = autoencoder_salt_pepper.predict(X_test_salt_pepper)\n",
@@ -819,7 +834,7 @@
         "   \n",
         "plt.show()"
       ],
-      "execution_count": 45,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
