--- a/Compression_with_autoencoder.ipynb
+++ b/Compression_with_autoencoder.ipynb
@@ -100,28 +100,15 @@
       "metadata": {
         "id": "FSF2lF5O8zoY",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 52
-        },
-        "outputId": "5c023021-ac71-4303-c1f7-3006938ee3e4"
+        "colab": {}
       },
       "source": [
         "from keras.datasets import mnist\n",
         "from keras.utils import np_utils\n",
         "(X_train, y_train), (X_test, y_test) = mnist.load_data()"
       ],
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Downloading data from https://s3.amazonaws.com/img-datasets/mnist.npz\n",
-            "11493376/11490434 [==============================] - 0s 0us/step\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -355,13 +342,26 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "JfJSahJEIc5o",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "autoencoder.load_weights('/content/gdrive/My Drive/Colab Notebooks/checks_autoencoder/model-100.hdf5')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "u_JKkFuM-bix",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 217
         },
-        "outputId": "9dcc1dfd-c031-4fa0-b607-d0c12c5596de"
+        "outputId": "f87e6c1a-bce0-4f54-c171-93b2face9a57"
       },
       "source": [
         "decoded_imgs = autoencoder.predict(X_test)\n",
@@ -379,7 +379,7 @@
         "   \n",
         "plt.show()"
       ],
-      "execution_count": 12,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "display_data",
@@ -429,17 +429,53 @@
       "metadata": {
         "id": "o_KIZbza-fKt",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 324
+        },
+        "outputId": "412a102c-9d59-4ae7-dc24-01534338d128"
       },
       "source": [
-        "d=[]\n",
+        "d1=[]\n",
         "for i in range(20):\n",
-        "    d.append(psnr(X_test[i],decoded_imgs[i]))\n",
-        "print(d)\n",
-        "pyplot.bar(range(20),d, width = 0.5, color = 'red')\n"
+        "    d1.append(psnr(X_test[i],decoded_imgs[i]))\n",
+        "print(d1)\n",
+        "plt.bar(range(20),d1, width = 0.1, color = 'red')\n"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[70.61072741606674, 64.94277827276898, 74.6058235600837, 67.95662518002379, 68.35279246282735, 76.20041784172668, 65.79163446309335, 64.8627051333858, 64.7375531076073, 68.01398221696789, 69.30720032925741, 64.23422402933681, 69.71031409254094, 69.013679115206, 71.3134584756899, 65.0062718295902, 68.68074771167377, 69.51850078651007, 63.96575528202956, 69.36870858021884]\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<BarContainer object of 20 artists>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 22
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXsAAAD8CAYAAACW/ATfAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADh0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uMy4xLjIsIGh0\ndHA6Ly9tYXRwbG90bGliLm9yZy8li6FKAAARZElEQVR4nO3de4yldX3H8fenLBRFKwtOt1swBSuB\n0CZcnFCs1lgWKVLDbhtCIKbd6iYbU22ltlFaE7VN/5BetLZp2myFum0oLiJ0N8YL2xVjmtTVAZfr\nYnehoGz2MiqIl6a6+u0f51k6HWZ2zs65zODv/Uom57n8nvN88zvPfOaZ3znPc1JVSJJ+tP3YUhcg\nSRo9w16SGmDYS1IDDHtJaoBhL0kNMOwlqQF9hX2S30vyYJIHktyS5MQkZybZmWRvki1JThh1sZKk\nxVkw7JOcBvwuMFlVPw8cB1wD3AB8oKpeBjwJbBhloZKkxet3GGcF8LwkK4DnA/uBS4DbuvWbgXXD\nL0+SNAwrFmpQVfuS/AXwFeC/gTuBu4Gnqupw1+wJ4LS5tk+yEdgIcNJJJ738nHPOGUbdktSMu+++\n+2tVNTHIcywY9klWAmuBM4GngI8Cl/e7g6raBGwCmJycrKmpqcVVKkmNSvL4oM/RzzDOpcB/VdV0\nVX0fuB14JXByN6wDcDqwb9BiJEmj0U/YfwW4OMnzkwRYAzwE3AVc1bVZD2wdTYmSpEEtGPZVtZPe\nG7H3APd322wC3gm8Pcle4FTgxhHWKUkawIJj9gBV9R7gPbMWPwpcNPSKJElD5xW0ktQAw16SGmDY\nS1IDDHtJaoBhL0kNMOxbkSx1BZKWkGEvSQ0w7CWpAYa9JDXAsO9X4ri3pOcsw16SGmDYS1IDDHtJ\naoBhL0kNMOwlqQGGvSQ1wLCXpAYY9pLUgAXDPsnZSXbN+Hk6yXVJTkmyPcme7nHlOAqWNGZeUPgj\noZ8vHP9yVZ1fVecDLwe+C9wBXA/sqKqzgB3dvCRpGTrWYZw1wCNV9TiwFtjcLd8MrBtmYc/i2YUk\nLdqxhv01wC3d9Kqq2t9NHwBWDa0qSdJQ9R32SU4ArgQ+OntdVRVQ82y3MclUkqnp6elFFyo1y/9q\nNQTHcmb/OuCeqjrYzR9Mshqgezw010ZVtamqJqtqcmJiYrBqpaVg2D63LfXrt0yOnWMJ+2v5vyEc\ngG3A+m56PbB1WEVJGqKlDjstC32FfZKTgNcCt89Y/D7gtUn2AJd285I0XP6xGooV/TSqqu8Ap85a\n9nV6n87ROCRQc74tIkkL8gracfHMZOl4ZigZ9pLUAsNekhpg2EtSAwx7SWqAYS9JDTDs1R8/zSI9\npxn2ktSAdsLez1pLS8PfvWWhnbDX0hr0l92wkAZi2Euj5pmtlgHDXpKO5kfkD7VhL0kNMOwlqQGG\nvSQ1wLCXpAYY9pLUAMNekhpg2EtSA/r9wvGTk9yW5OEku5O8IskpSbYn2dM9rhx1sZKkxen3zP6D\nwKeq6hzgPGA3cD2wo6rOAnZ085KkZWjBsE/yIuDVwI0AVfW9qnoKWAts7pptBtaNqkhJ0mD6ObM/\nE5gG/jHJl5J8KMlJwKqq2t+1OQCsmmvjJBuTTCWZmp6eHk7VkqRj0k/YrwAuBP6uqi4AvsOsIZuq\nKqDm2riqNlXVZFVNTkxMDFqvJGkR+gn7J4AnqmpnN38bvfA/mGQ1QPd4aDQlSpIGtWDYV9UB4KtJ\nzu4WrQEeArYB67tl64GtI6lQkjSwFX22+x3g5iQnAI8Cb6T3h+LWJBuAx4GrR1OiJGlQfYV9Ve0C\nJudYtWa45UiSRsEraCWpAYa9JDXAsJekBhj2ktQAw16SGmDYS1IDDHtJaoBhL0kNMOwlqQGGvSQ1\nwLCXpAYY9pLUAMNekhpg2EtSAwx7SWqAYS9JDTDsJakBhr0kNaCvryVM8hjwLeAHwOGqmkxyCrAF\nOAN4DLi6qp4cTZmSpEEcy5n9L1fV+VV15Ltorwd2VNVZwI5uXpK0DA0yjLMW2NxNbwbWDV6OJGkU\n+g37Au5McneSjd2yVVW1v5s+AKyaa8MkG5NMJZmanp4esFxJ0mL0NWYPvKqq9iX5SWB7kodnrqyq\nSlJzbVhVm4BNAJOTk3O2kSSNVl9n9lW1r3s8BNwBXAQcTLIaoHs8NKoiJUmDWTDsk5yU5IVHpoHL\ngAeAbcD6rtl6YOuoipQkDaafYZxVwB1JjrT/l6r6VJIvArcm2QA8Dlw9ujIlSYNYMOyr6lHgvDmW\nfx1YM4qiJEnD5RW0ktQAw16SGmDYS1IDDHtJaoBhL0kNMOwlqQGGvSQ1wLCXpAYY9pLUAMNekhpg\n2EtSAwx7SWqAYS9JDTDsJakBhr0kNcCwl6QGGPaS1ADDXpIa0HfYJzkuyZeSfLybPzPJziR7k2xJ\ncsLoypQkDeJYzuzfBuyeMX8D8IGqehnwJLBhmIVJkoanr7BPcjrwq8CHuvkAlwC3dU02A+tGUaAk\naXD9ntn/FfAO4Ifd/KnAU1V1uJt/Ajhtrg2TbEwylWRqenp6oGIlSYuzYNgneT1wqKruXswOqmpT\nVU1W1eTExMRinkKSNKAVfbR5JXBlkiuAE4GfAD4InJxkRXd2fzqwb3RlSpIGseCZfVX9YVWdXlVn\nANcAn6mqNwB3AVd1zdYDW0dWpSRpIIN8zv6dwNuT7KU3hn/jcEqSJA1bP8M4z6iqzwKf7aYfBS4a\nfkmSpGHzClpJaoBhL0kNMOwlqQGGvSQ1wLCXpAYY9pLUAMNekhpg2EtSAwx7SWqAYS9JDTDsJakB\nhr0kNcCwl6QGGPaS1ADDXpIaYNhLUgMMe0lqgGEvSQ1YMOyTnJjkC0nuTfJgkj/ulp+ZZGeSvUm2\nJDlh9OVKkhajnzP7/wEuqarzgPOBy5NcDNwAfKCqXgY8CWwYXZmSpEEsGPbV8+1u9vjup4BLgNu6\n5ZuBdSOpUJI0sL7G7JMcl2QXcAjYDjwCPFVVh7smTwCnzbPtxiRTSaamp6eHUbMk6Rj1FfZV9YOq\nOh84HbgIOKffHVTVpqqarKrJiYmJRZYpSRrEMX0ap6qeAu4CXgGcnGRFt+p0YN+Qa5MkDUk/n8aZ\nSHJyN/084LXAbnqhf1XXbD2wdVRFSpIGs2LhJqwGNic5jt4fh1ur6uNJHgI+kuRPgS8BN46wTknS\nABYM+6q6D7hgjuWP0hu/lyQtc15BK0kNMOwlqQGGvSQ1wLCXpAYY9pLUAMNekhpg2EtSAwx7SWqA\nYS9JDTDsJakBhr0kNcCwl6QGGPaS1ADDXpIaYNhLUgMMe0lqgGEvSQ0w7CWpAf184fhLktyV5KEk\nDyZ5W7f8lCTbk+zpHleOvlxJ0mL0c2Z/GPj9qjoXuBh4S5JzgeuBHVV1FrCjm5ckLUMLhn1V7a+q\ne7rpbwG7gdOAtcDmrtlmYN2oipQkDeaYxuyTnAFcAOwEVlXV/m7VAWDVPNtsTDKVZGp6enqAUiVJ\ni9V32Cd5AfAx4LqqenrmuqoqoObarqo2VdVkVU1OTEwMVKwkaXH6Cvskx9ML+pur6vZu8cEkq7v1\nq4FDoylRkjSofj6NE+BGYHdVvX/Gqm3A+m56PbB1+OVJkoZhRR9tXgn8BnB/kl3dsj8C3gfcmmQD\n8Dhw9WhKlCQNasGwr6p/BzLP6jXDLUeSNApeQStJDTDsJakBhr0kNcCwl6QGGPaS1ADDXpIaYNhL\nUgMMe0lqgGEvSQ0w7CWpAYa9JDXAsJekBhj2ktQAw16SGmDYS1IDDHtJaoBhL0kNMOwlqQH9fOH4\nTUkOJXlgxrJTkmxPsqd7XDnaMiVJg+jnzP7DwOWzll0P7Kiqs4Ad3bwkaZlaMOyr6nPAN2YtXgts\n7qY3A+uGXJckaYgWO2a/qqr2d9MHgFVDqkeSNAIDv0FbVQXUfOuTbEwylWRqenp60N1JkhZhsWF/\nMMlqgO7x0HwNq2pTVU1W1eTExMQidydJGsRiw34bsL6bXg9sHU45kqRR6Oejl7cA/wGcneSJJBuA\n9wGvTbIHuLSblyQtUysWalBV186zas2Qa5EkjYhX0EpSAwx7SWqAYS9JDTDsJakBhr0kNcCwl6QG\nGPaS1ADDXpIaYNhLUgMMe0lqgGEvSQ0w7CWpAYa9JDXAsJekBhj2ktQAw16SGmDYS1IDDHtJaoBh\nL0kNGCjsk1ye5MtJ9ia5flhFSZKGa9Fhn+Q44G+B1wHnAtcmOXdYhUmShmeQM/uLgL1V9WhVfQ/4\nCLB2OGVJkoZpxQDbngZ8dcb8E8AvzG6UZCOwsZv9dpIvD7DPF5N8bYDtIRlo8wW2fzEwf32j3Xc/\n2x+9vtHv/2hrF65tafvvuX3sjX7/C3lu999S/+7C2YM+wSBh35eq2gRsGsZzJZmqqslhPNcoWN/i\nLefawPoGZX2DSTI16HMMMoyzD3jJjPnTu2WSpGVmkLD/InBWkjOTnABcA2wbTlmSpGFa9DBOVR1O\n8lbg08BxwE1V9eDQKpvbUIaDRsj6Fm851wbWNyjrG8zA9aWqhlGIJGkZ8wpaSWqAYS9JDViWYb/Q\nbRiS/HiSLd36nUnOGFNdL0lyV5KHkjyY5G1ztHlNkm8m2dX9vHsctc3Y/2NJ7u/2/ayPa6Xnr7u+\nuy/JhWOs7ewZ/bIrydNJrpvVZqz9l+SmJIeSPDBj2SlJtifZ0z2unGfb9V2bPUnWj7G+P0/ycPf6\n3ZHk5Hm2PeqxMML63ptk34zX8Ip5th357VbmqW/LjNoeS7Jrnm1H2n/z5cnIjr+qWlY/9N7sfQR4\nKXACcC9w7qw2vw38fTd9DbBlTLWtBi7spl8I/Occtb0G+PgS9t9jwIuPsv4K4JNAgIuBnUv4Oh8A\nfmYp+w94NXAh8MCMZX8GXN9NXw/cMMd2pwCPdo8ru+mVY6rvMmBFN33DXPX1cyyMsL73An/Qx+t/\n1N/zUdU3a/1fAu9eiv6bL09GdfwtxzP7fm7DsBbY3E3fBqxJBr9EbSFVtb+q7ummvwXspncl8XPJ\nWuCfqufzwMlJVi9BHWuAR6rq8SXY9zOq6nPAN2Ytnnl8bQbWzbHprwDbq+obVfUksB24fBz1VdWd\nVXW4m/08vWtclsQ8/dePsdxu5Wj1dZlxNXDLsPfbj6PkyUiOv+UY9nPdhmF2oD7TpjvovwmcOpbq\nOt3Q0QXAzjlWvyLJvUk+meTnxlkXUMCdSe5O71YVs/XTv+NwDfP/ki1l/wGsqqr93fQBYNUcbZZL\nP76J3n9qc1noWBilt3bDTDfNMwyxHPrvl4CDVbVnnvVj679ZeTKS4285hv2yl+QFwMeA66rq6Vmr\n76E3NHEe8DfAv465vFdV1YX07kb6liSvHvP+F5TeRXhXAh+dY/VS99//U73/mZfl55OTvAs4DNw8\nT5OlOhb+DvhZ4HxgP72hkuXoWo5+Vj+W/jtangzz+FuOYd/PbRieaZNkBfAi4OvjKC7J8fRemJur\n6vbZ66vq6ar6djf9CeD49G5ANhZVta97PATcQe/f5ZmWw20uXgfcU1UHZ69Y6v7rHDwytNU9Hpqj\nzZL2Y5LfAl4PvKELhGfp41gYiao6WFU/qKofAv8wz36Xuv9WAL8ObJmvzTj6b548GcnxtxzDvp/b\nMGwDjrz7fBXwmfkO+GHqxvhuBHZX1fvnafNTR94/SHIRvT4e1x+ik5K88Mg0vTfyHpjVbBvwm+m5\nGPjmjH8Zx2XeM6ql7L8ZZh5f64Gtc7T5NHBZkpXdMMVl3bKRS3I58A7gyqr67jxt+jkWRlXfzPeA\nfm2e/S717VYuBR6uqifmWjmO/jtKnozm+BvVO80Dvkt9Bb13ph8B3tUt+xN6BzfAifSGAPYCXwBe\nOqa6XkXvX6r7gF3dzxXAm4E3d23eCjxI79MFnwd+cYz99tJuv/d2NRzpu5n1hd6XzjwC3A9Mjvm1\nPYleeL9oxrIl6z96f3T2A9+nN+65gd77PzuAPcC/Aad0bSeBD83Y9k3dMbgXeOMY69tLb7z2yDF4\n5JNpPw184mjHwpjq++fu2LqPXnCtnl1fN/+s3/Nx1Nct//CRY25G27H231HyZCTHn7dLkKQGLMdh\nHEnSkBn2ktQAw16SGmDYS1IDDHtJaoBhL0kNMOwlqQH/CyUbX0rKt3qYAAAAAElFTkSuQmCC\n",
+            "text/plain": [
+              "<Figure size 432x288 with 1 Axes>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -448,24 +484,53 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 320
         },
-        "outputId": "209fd741-99c5-4ff4-ac84-7474ba05e2e0"
+        "outputId": "9cd1d06e-b695-4eb1-c801-8ae85a4950e5"
       },
       "source": [
         "from skimage.metrics import structural_similarity as ssim\n",
-        "img1=X_test[0]\n",
-        "image=X_test[0]\n",
-        "ssim_noise=ssim(img1,image, data=img1.max()-image.min())\n"
+        "s1=[]\n",
+        "for i in range(20):\n",
+        "    img1=X_test[i]\n",
+        "    image=decoded_imgs[i]\n",
+        "    ss=ssim(img1,image, data=img1.max()-image.min())\n",
+        "    s1.append(ss)\n",
+        "print(s1)\n",
+        "plt.bar(range(20),s1, width = 0.1, color = 'Blue')\n"
       ],
-      "execution_count": 24,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "1.0\n"
+            "[0.9134516728597978, 0.7917801668577202, 0.9726613525575778, 0.9056794915205354, 0.8784075262771494, 0.973076886902896, 0.8442424948808501, 0.8074624526451807, 0.788113894903249, 0.8989839083374652, 0.9188695704968143, 0.8101153694062566, 0.9280050435275374, 0.9289233010705674, 0.9545404802866454, 0.7643709516937135, 0.9195845768867391, 0.9072608297414965, 0.7745837302657385, 0.9088315873249904]\n"
           ],
           "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<BarContainer object of 20 artists>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 26
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "image/png": "iVBORw0KGgoAAAANSUhEUgAAAX8AAAD4CAYAAAAEhuazAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADh0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uMy4xLjIsIGh0\ndHA6Ly9tYXRwbG90bGliLm9yZy8li6FKAAAPZElEQVR4nO3df4xlZ13H8feHLpUEKi3uiLW7skUX\n4mpUmkmpgtiEituN2fVXyG40FGjYEFkDETVrMJXUvwoRE0wFizT8CNIWFNzokgWxhsS4tVNoS7el\ndLoWu2tpB2iKhGhZ/frHPauX2flxu3PunTt93q9kMufHc8755pnnfubMOefeSVUhSWrLM9a7AEnS\n5Bn+ktQgw1+SGmT4S1KDDH9JatCm9Trw5s2ba9u2bet1eEnakO64446vVdXMWvezbuG/bds25ubm\n1uvwkrQhJflKH/tZ9bJPkhuTPJbknmXWJ8m7k8wnuTvJJX0UJkkan1Gu+X8A2LnC+iuB7d3XfuA9\nay9LkjROq4Z/VX0O+MYKTfYAH6qBo8D5SS7sq0BJUv/6eNrnIuDhofkT3bIzJNmfZC7J3MLCQg+H\nliSdjYk+6llVN1TVbFXNzsys+Wa1JOks9RH+J4GtQ/NbumWSpCnVR/gfAl7TPfVzGfBEVT3Sw34l\nSWOy6nP+ST4KXA5sTnIC+EPgmQBV9V7gMLALmAe+DbxuXMVKkvqxavhX1b5V1hfwpt4qkiSNnZ/t\ncxaSwddGtdHrl7R2hr8kNcjwl6QGGf6S1CDDX9LIvF/09GH4S1KDDH9JapDhL0kNMvwlqUGGv7TB\nrOWGqzdsdZrhL0kNMvylp8gz5/XjXy792ZDh7wCQpLXZkOEvSRvRNJ24Gv7rYJoGgNQSX3v/z/BX\nc3zxS4a/JDXJ8JekBhn+ktQgw1+SGmT4b0A+sSBprQx/SWqQ4S9JDTL8JalBhr8kNcjwl6QGGf6S\n1CDDX0+Zj5lKG5/hL0kNMvwlqUGGvyQ1yPCXpAYZ/pLUoJHCP8nOJPcnmU9ycIn1P5Tk1iRfSHJ3\nkl39lypJ6suq4Z/kHOB64EpgB7AvyY5Fzf4AuKWqXgLsBf6s70KlpwsfldU0GOXM/1JgvqqOV9WT\nwE3AnkVtCvjebvq5wL/3V6Kebgw/af1tGqHNRcDDQ/MngJcuavN24NNJfgt4NnBFL9VJksairxu+\n+4APVNUWYBfw4SRn7DvJ/iRzSeYWFhZ6OrQk6akaJfxPAluH5rd0y4ZdDdwCUFX/DDwL2Lx4R1V1\nQ1XNVtXszMzM2VXcA/8TlqTWjRL+twPbk1yc5FwGN3QPLWrzb8ArAZL8KIPw99ReY+EvbmntVg3/\nqjoFHACOAPcxeKrnWJJrk+zumr0VeEOSu4CPAq+tqhpX0ZKktRnlhi9VdRg4vGjZNUPT9wIv67c0\nSdK4+A5fSRrR0+l+oeEvSQ0y/CVNzNPpzHmjM/wlqUGGvyQ1yPCXpAYZ/pLUIMNfkhpk+EtSgwx/\nSWqQ4S9JDTL8JalBhr8kNcjwl6QGGf6S1CDDX5IaZPhLUoMMf0lqkOEvSQ0y/CWpQYa/JDXI8Jek\nBhn+ktQgw1+SGmT4S1KDDH9JapDhL0kNMvwlqUGGvyQ1yPCXpAYZ/pLUIMNfkhpk+EtSgwx/SWrQ\nSOGfZGeS+5PMJzm4TJtXJ7k3ybEkf9lvmZKkPm1arUGSc4DrgZ8HTgC3JzlUVfcOtdkO/D7wsqp6\nPMn3j6tgSdLajXLmfykwX1XHq+pJ4CZgz6I2bwCur6rHAarqsX7LlCT1aZTwvwh4eGj+RLds2IuA\nFyX5pyRHk+xcakdJ9ieZSzK3sLBwdhVLktasrxu+m4DtwOXAPuB9Sc5f3Kiqbqiq2aqanZmZ6enQ\nkqSnapTwPwlsHZrf0i0bdgI4VFXfqap/Bb7M4JeBJGkKjRL+twPbk1yc5FxgL3BoUZtPMjjrJ8lm\nBpeBjvdYpySpR6uGf1WdAg4AR4D7gFuq6liSa5Ps7podAb6e5F7gVuB3q+rr4ypakrQ2qap1OfDs\n7GzNzc2d1bbJ4PvZlu72a99+LcPG7ddv+2kYO26/1p9/7qiq2bPfw4Dv8JWkBhn+ktQgw1+SGmT4\nS1KDDH9JapDhL0kNMvwlqUGGvyQ1yPCXpAYZ/pLUIMNfkhpk+EtSgwx/SWqQ4S9JDTL8JalBhr8k\nNcjwl6QGGf6S1CDDX5IaZPhLUoMMf0lqkOEvSQ0y/CWpQYa/JDXI8JekBhn+ktQgw1+SGmT4S1KD\nDH9JapDhL0kNMvwlqUGGvyQ1yPCXpAYZ/pLUoJHCP8nOJPcnmU9ycIV2v5qkksz2V6IkqW+rhn+S\nc4DrgSuBHcC+JDuWaHce8Gbgtr6LlCT1a5Qz/0uB+ao6XlVPAjcBe5Zo90fAdcB/9lifJGkMRgn/\ni4CHh+ZPdMv+T5JLgK1V9Xcr7SjJ/iRzSeYWFhaecrGSpH6s+YZvkmcA7wLeulrbqrqhqmaranZm\nZmath5YknaVRwv8ksHVofku37LTzgB8H/jHJQ8BlwCFv+krS9Bol/G8Htie5OMm5wF7g0OmVVfVE\nVW2uqm1VtQ04CuyuqrmxVCxJWrNVw7+qTgEHgCPAfcAtVXUsybVJdo+7QElS/zaN0qiqDgOHFy27\nZpm2l6+9LEnSOPkOX0lqkOEvSQ0y/CWpQYa/JDXI8JekBhn+ktQgw1+SGmT4S1KDDH9JapDhL0kN\nMvwlqUGGvyQ1yPCXpAYZ/pLUIMNfkhpk+EtSgwx/SWqQ4S9JDTL8JalBhr8kNcjwl6QGGf6S1CDD\nX5IaZPhLUoMMf0lqkOEvSQ0y/CWpQYa/JDXI8JekBhn+ktQgw1+SGmT4S1KDDH9JatBI4Z9kZ5L7\nk8wnObjE+t9Ocm+Su5N8NskL+i9VktSXVcM/yTnA9cCVwA5gX5Idi5p9AZitqp8APg68o+9CJUn9\nGeXM/1JgvqqOV9WTwE3AnuEGVXVrVX27mz0KbOm3TElSn0YJ/4uAh4fmT3TLlnM18KmlViTZn2Qu\nydzCwsLoVUqSetXrDd8kvwHMAu9can1V3VBVs1U1OzMz0+ehJUlPwaYR2pwEtg7Nb+mWfZckVwBv\nA36uqv6rn/IkSeMwypn/7cD2JBcnORfYCxwabpDkJcCfA7ur6rH+y5Qk9WnV8K+qU8AB4AhwH3BL\nVR1Lcm2S3V2zdwLPAT6W5M4kh5bZnSRpCoxy2YeqOgwcXrTsmqHpK3quS5I0Rr7DV5IaZPhLUoMM\nf0lqkOEvSQ0y/CWpQYa/JDXI8JekBhn+ktQgw1+SGmT4S1KDDH9JapDhL0kNMvwlqUGGvyQ1yPCX\npAYZ/pLUIMNfkhpk+EtSgwx/SWqQ4S9JDTL8JalBhr8kNcjwl6QGGf6S1CDDX5IaZPhLUoMMf0lq\nkOEvSQ0y/CWpQYa/JDXI8JekBhn+ktQgw1+SGmT4S1KDRgr/JDuT3J9kPsnBJdZ/T5Kbu/W3JdnW\nd6GSpP6sGv5JzgGuB64EdgD7kuxY1Oxq4PGq+hHgT4Dr+i5UktSfUc78LwXmq+p4VT0J3ATsWdRm\nD/DBbvrjwCuTpL8yJUl92jRCm4uAh4fmTwAvXa5NVZ1K8gTwfcDXhhsl2Q/s72a/leT+sym6szn5\n7v0/VWv99bTK9pth5frGfPzVrKn/JlD7iv23kfuuh+M3PfZ6OP5G778Xr+3oA6OEf2+q6gbghj72\nlWSuqmb72Nc4WN/aTHN901wbWN9abYT6+tjPKJd9TgJbh+a3dMuWbJNkE/Bc4Ot9FChJ6t8o4X87\nsD3JxUnOBfYChxa1OQRc1U3/GvAPVVX9lSlJ6tOql326a/gHgCPAOcCNVXUsybXAXFUdAt4PfDjJ\nPPANBr8gxq2Xy0djZH1rM831TXNtYH1r1UR98QRdktrjO3wlqUGGvyQ1aOrDf5o/WiLJ1iS3Jrk3\nybEkb16izeVJnkhyZ/d1zaTq647/UJIvdsc+4xGxDLy767+7k1wyobpePNQndyb5ZpK3LGoz8b5L\ncmOSx5LcM7TseUk+k+SB7vsFy2x7VdfmgSRXLdVmDLW9M8mXup/dJ5Kcv8y2K46DMdb39iQnh36G\nu5bZdsXX+Rjru3motoeS3LnMtmPtv+WyZKxjr6qm9ovBDeYHgRcC5wJ3ATsWtflN4L3d9F7g5gnW\ndyFwSTd9HvDlJeq7HPjbdezDh4DNK6zfBXwKCHAZcNs6/Zy/CrxgvfsOeAVwCXDP0LJ3AAe76YPA\ndUts9zzgePf9gm76ggnU9ipgUzd93VK1jTIOxljf24HfGeHnv+LrfFz1LVr/x8A169F/y2XJOMfe\ntJ/5T/VHS1TVI1X1+W76P4D7GLzbeSPZA3yoBo4C5ye5cMI1vBJ4sKq+MuHjnqGqPsfgibVhw2Ps\ng8AvLbHpLwCfqapvVNXjwGeAneOurao+XVWnutmjDN6Hsy6W6btRjPI6X7OV6usy49XAR/s+7ihW\nyJKxjb1pD/+lPlpicbh+10dLAKc/WmKiustNLwFuW2L1Tye5K8mnkvzYRAuDAj6d5I4MPl5jsVH6\neNz2svyLbj377rTnV9Uj3fRXgecv0WYa+vH1DP6KW8pq42CcDnSXpW5c5rLFNPTdzwKPVtUDy6yf\nWP8typKxjb1pD/8NIclzgL8C3lJV31y0+vMMLmf8JPCnwCcnXN7Lq+oSBp/K+qYkr5jw8VeUwRsH\ndwMfW2L1evfdGWrwd/bUPR+d5G3AKeAjyzRZr3HwHuCHgZ8CHmFwaWUa7WPls/6J9N9KWdL32Jv2\n8J/6j5ZI8kwGP6yPVNVfL15fVd+sqm9104eBZybZPKn6qupk9/0x4BMM/sQeNkofj9OVwOer6tHF\nK9a774Y8evpSWPf9sSXarFs/Jnkt8IvAr3cBcYYRxsFYVNWjVfXfVfU/wPuWOe66jsEuN34FuHm5\nNpPov2WyZGxjb9rDf6o/WqK7Tvh+4L6qetcybX7g9D2IJJcy6POJ/HJK8uwk552eZnBz8J5FzQ4B\nr8nAZcATQ39mTsKyZ1zr2XeLDI+xq4C/WaLNEeBVSS7oLm28qls2Vkl2Ar8H7K6qby/TZpRxMK76\nhu8f/fIyxx3ldT5OVwBfqqoTS62cRP+tkCXjG3vjunvd413wXQzufD8IvK1bdi2DwQ7wLAaXDOaB\nfwFeOMHaXs7gz7C7gTu7r13AG4E3dm0OAMcYPMFwFPiZCdb3wu64d3U1nO6/4frC4J/1PAh8EZid\nYH3PZhDmzx1atq59x+AX0SPAdxhcO72awT2kzwIPAH8PPK9rOwv8xdC2r+/G4TzwugnVNs/geu/p\n8Xf6ybcfBA6vNA4mVN+Hu3F1N4Mgu3Bxfd38Ga/zSdTXLf/A6TE31Hai/bdCloxt7PnxDpLUoGm/\n7CNJGgPDX5IaZPhLUoMMf0lqkOEvSQ0y/CWpQYa/JDXofwHhMf9QxuA7pgAAAABJRU5ErkJggg==\n",
+            "text/plain": [
+              "<Figure size 432x288 with 1 Axes>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
         }
       ]
     },
